app/styles/styles.scss
/* ... */
.link_selected {
  background-color: rgb(68, 85, 150);
  border-radius : 11px;
  color : white !important;
}

.token_selected {
  color: #fff !important;
  background-color: #666;
}

.aux_selected {
  color: #000;
  background-color: #FFDDD8;
}

#result-container {
  clear: both;
  min-height: 400px;
}

#json-link {
  float: right;
  // display: none;
  img {
    border: 0px;
  }
}

#columns {
  position: relative;
  max-height: 600px;
}

#left-column {
  position: absolute;
  left: 0px;
  right : 0;
  transition : right 300ms;
  &.sidebar_visible {
    right : 258px;
    transition : right 300ms;
  }
}

#sidebar {
  position: absolute;
  right: 0px;
  width: 250px;
  padding: 5px 0px 5px 5px;
  right : -268px;
  transition : right 300ms;
  &.visible {
    transition : right 300ms;
    // display : block;
    right : 0;
  }
  &.visible.fixed {
    right: 8px;
    position: fixed;
    top: 8px;
    overflow-y: auto;
    max-height: 100%;
  }
  &:empty {
    padding: 0;
    border: none;
  }
}

.external_link {
  display: none;
}

#sidebar li:hover .external_link {
  background-image: url("../img/fish_icon.png");
  background-origin: content-box;
  background-repeat: no-repeat;
  @include inline-block();
  display: inline-block !important;
  height: 12px;
  width: 15px;
  background-size: 15px;
  margin-left: 2em;
  position: relative;
  top: 2px;
  cursor: pointer;
}

#sidbar_info {
  @include inline-block();
  position: relative;
  top: 3px;
  left: 5px;
  opacity: 0.8;
  margin-top: -4px;
}

.kwic_sidebar {
  background-color: #fff;
  border-style: solid;
  border-width: 1px;
  border-color: #999;
}

#sidebar {
  div {
    margin-bottom: 10px;
  }
  p {
    margin: 0 0 0 0;
  }
  ul {
    margin-top: 0;
    margin-bottom: 2px;
    padding-left: 20px;
    list-style: none;
    line-height: 16px;
  }

  #selected_sentence > h4:last-child {
    display : none;
  }
}

#dialog ol {
  margin: 10px 0;
  font-size: 12px;
  list-style: decimal;
  > li {
    padding: 5px 0;
    line-height: 18px;
  }
}


span.absStat {
  color: #999999;
}

a {
  &.absStat {
    color: #999999;
    &:hover {
      color: indianred;
    }
  }
  &.relStat {
    color: #000000;
    &:hover {
      color: indianred;
    }
  }
}

.word_column {
  text-align: left;
}

.linked_sentence {
  overflow-x: visible;
  font-weight: normal;
  color: #999;
  font-style: italic;
  position: relative;
  .lnk {
    // text-align : center;
    // display : block;
    // position : relative;
  }
  .left, .match, .right {
    display : none;

  }
}

#about_body {
  position: relative;
  &:after {
    content: "";
    z-index: -1;
    position: absolute;
    top : 300px;
    right : 0;
    background : url("../img/feather.svg") no-repeat;
    background-size: contain;
    height: 430px;
    width : 230px;
  }
}

#about_content ul {
  padding-left: 10px;
  margin-top: 8px;
}

#login {
  /*display : none;*/
}

.modal.login {
  width: 280px;
  height : 370px;
  margin-left : -120px;
}

#login_popup {
  // display: none;
  min-height: initial;
  * {
    display: block;
  }
  label {
    margin-top: 5px;
  }
  .err_msg {
    // display: none;
    font-size: .8em;
  }
  input[type=submit] {
    float: right;
    margin-top: 2em;
  }
}

.logged_in #login {
  display: none;
}

#log_out {
  display: none;
  float: right;
  margin-right: 8px;
  // margin-top: 7px;
  margin-left: 3px;
  span {
    // margin-right: 1em;
  }
}

.logged_in #log_out {
  display: block;
}

/* when selecting a word, not a lemgram, this pops up. */

.lemgram_select {
  margin-top: 8px;
}

label[for=lemgram_select]:before {
  display : block;
}



#highlight {
  position: absolute;
  background-color: #FFF3D8;

  @include border-radius(5px);
}

.inline_list {
  margin: 0;
  padding: 0;
  li {
    @include inline-block();
  }
}

.msie8 .inline_list li {
  display: inline;
}

.inline_list span {
  padding: 0 5px;
  color: grey;
}

#mode_switch {
  margin : 0;
  margin-right: 10px;
  float: left;
  padding-left: 0;
  a:visited {
    color : navy;
  }
  a:hover {
    color: indianred;
  }
  li {
    &.visible {
      @include inline-block();
    }
    &.selected a {
      color : black;
    }
    &.visible:after {
      content: "|";
      margin : 0 0.3em;
      color : grey;
    }
    &:last-child:after {
      // content: "";
      display: none;
    }
    .dropdown-toggle {
      background-color : transparent;
    }
    &.menu_more {
      margin-left: -3px;
      a {
        background: rgba(0,0,0,0);
      }
      i {
        padding-left: 5px;
      }
    }
  }
}

.radioList_selected {
  color: black !important;
  cursor: default;
}

.custom_anchor {
  padding-right: 8px !important;
}

// .ui-tabs .ui-tabs-nav li.custom_tab.loading {
//   padding-right : 18px;
// }

.tabClose {
  padding: 0 !important;
  margin-right: 6px;
  cursor: pointer !important;
}

.hits_picture_table {
  /*    opacity: .3; */
  width: 100%;
  padding: 0px;
}

// .hits_picture_corp:hover! {}

.hits_picture {
  cursor: pointer;
  position: absolute;
  right: 10px;
  left: 280px;
  top: -1px;
  @include transition(left 400ms ease);
}

#showLineDiagram {
  position: relative;
  top: 3px;
}

.query_token {
  .logic_switcher {
    float: left;
  }
  .close_btn {
    cursor : pointer;
    float: right;
    opacity: 1;
    @include transition(opacity 200ms ease);
    font-size : 15px;
  }
  &:only-of-type .close_btn {
    opacity: 0;
    cursor: default;
    @include transition(opacity 200ms ease);
  }
}

.right_col {
  padding-right: 2px;
}
.ie8 .right_col .input {
    float: right;
}

.query_arg {
  @include border-radius(2px);
  padding: 5px;
  background-color: #f7fceb;
  border: solid 1px #999;
  margin-bottom: 5px;
  padding-right : 13px;
}

.or_arg {
  margin-bottom: 5px;
  .ui-icon-info {
    @include inline-block(text-bottom);
    cursor: pointer;
  }
}

.query_arg:only-of-type .or_arg:only-child .remove_arg {
  cursor: default;
  opacity: 0;
  @include transition(opacity 200ms ease);
}
/* ... */

